# sirakawa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  beamercolorthemeisct.sty  beamerfontthemeisct.sty  beamerinnerthemeisct.sty  beamerouterthemeisct.sty  beamerthemeisct.sty  digitalocean-routine.sh  main.bib  main.tex  project.clj  pyproject.toml
disruptor/: __init__.py
doc/: intro.md
src/digitalocean_routine/: core.clj
test/digitalocean_routine/: core_test.clj
